--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,14 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.2</version>
+			<!--<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>-->
 		</dependency>
+
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -51,6 +58,8 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
