--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 
 spring:
   datasource:
-     url: jdbc:mysql://localhost:3306/fortest?useUnicode=true&characterEncoding=utf-8
+     url: jdbc:mysql://localhost:3306/fortest?useUnicode=true&characterEncoding=utf-8&useSSL=true
      username: root
      password: 123456
      driver-class-name: com.mysql.jdbc.Driver
@@ -9,3 +9,6 @@ spring:
 mybatis:
   typeAliasesPackage: com.dt.shopping.bean
   mapperLocations: classpath:mapper/*.xml
+
+
+
